--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-android:background="#ffffff">
+android:background="@color/colorAccent">
 
 <com.google.android.material.appbar.AppBarLayout
     android:id="@+id/welcome_appbar_layout"
