--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -38,9 +38,8 @@
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:src="@drawable/profile_image"
-            app:civ_border_color="#ff000000"
-            />
-
+            app:civ_border_width="3dp"
+            app:civ_border_color="#000000" />
     </LinearLayout>
 
     <LinearLayout
