--- a/app/src/main/res/layout/viewholder_chat.xml
+++ b/app/src/main/res/layout/viewholder_chat.xml
@@ -12,11 +12,12 @@
 
         <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/chat_user_profile_image"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_gravity="center"
             app:roundAsCircle="true"
             android:background="@color/colorAccent"
+            android:layout_marginLeft="8dp"
             android:src="@drawable/screenshot" />
 
         <LinearLayout
