--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -35,14 +35,8 @@
                 android:textSize="9dp"
                 android:textColor="@color/colorAccent"/>
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_marginLeft="15sp"
-                android:layout_marginBottom="-40dp"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:src="@drawable/screenshot"
-                android:layout_gravity="bottom" />
         </FrameLayout>
+
 
 <!--        User Summary-->
         <LinearLayout
@@ -51,12 +45,44 @@
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:orientation="vertical">
-            <FrameLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="3">
+                android:layout_weight="3"
+                android:orientation="horizontal">
+                <com.facebook.drawee.view.SimpleDraweeView
+                    android:layout_width="65dp"
+                    android:layout_height="80dp"
+                    android:layout_gravity="start"
+                    android:layout_marginLeft="25dp"
+                    app:roundAsCircle="true"
+                    android:background="@color/colorAccent"
+                    android:src="@drawable/screenshot" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="15dp"
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="Dara"
+                        android:textStyle="bold"
+                        android:textColor="@color/colorPrimaryDark"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="Sokdara Dara"/>
+                </LinearLayout>
 
-            </FrameLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="Edit Profile"/>
+            </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
@@ -71,135 +97,4 @@
             </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
-
-<!--    <LinearLayout-->
-<!--        android:id="@+id/profileUpperLayout"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_below="@+id/profile_appbar"-->
-<!--        android:layout_marginTop="40dp"-->
-<!--        android:orientation="vertical"-->
-<!--        android:gravity="center">-->
-
-<!--        <de.hdodenhof.circleimageview.CircleImageView-->
-<!--            android:id="@+id/profileImageView"-->
-<!--            android:layout_width="120dp"-->
-<!--            android:layout_height="120dp"-->
-<!--            android:src="@drawable/profile_image"-->
-<!--            app:civ_border_color="#ff000000"-->
-<!--            />-->
-<!--        -->
-<!--        <TextView-->
-<!--            android:id="@+id/profileName"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="6dp"-->
-<!--            android:text="Mesut Ozil"-->
-<!--            android:textColor="@color/colorPrimary"-->
-<!--            android:textStyle="bold"-->
-<!--            android:textSize="24dp"/>-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/deviceTypeApp"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="Android Hista"-->
-<!--            android:textSize="15dp"/>-->
-
-<!--    </LinearLayout>-->
-
-<!--    <LinearLayout-->
-<!--        android:id="@+id/profileDetail"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_below="@+id/profileUpperLayout"-->
-<!--        android:layout_marginTop="40dp"-->
-<!--        android:paddingLeft="30dp"-->
-<!--        android:orientation="vertical"-->
-<!--        android:background="@color/colorPrimary">-->
-
-<!--        <LinearLayout-->
-<!--            android:id="@+id/myProfileLayout"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="horizontal">-->
-<!--            <ImageView-->
-<!--                android:layout_width="60dp"-->
-<!--                android:layout_height="60dp"-->
-<!--                android:elevation="12dp"-->
-<!--                android:src="@drawable/ic_person_white_24dp"-->
-<!--                android:padding="5dp"/>-->
-<!--            <TextView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_gravity="center"-->
-<!--                android:layout_marginLeft="23dp"-->
-<!--                android:text="@string/my_profile"-->
-<!--                android:textSize="18dp"-->
-<!--                android:textColor="@color/colorAccent"/>-->
-<!--        </LinearLayout>-->
-
-<!--        <LinearLayout-->
-<!--            android:id="@+id/messageLayout"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="horizontal">-->
-<!--            <ImageView-->
-<!--                android:layout_width="60dp"-->
-<!--                android:layout_height="60dp"-->
-<!--                android:padding="8dp"-->
-<!--                android:elevation="12dp"-->
-<!--                android:src="@drawable/ic_message_white_24dp"/>-->
-<!--            <TextView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_gravity="center"-->
-<!--                android:layout_marginLeft="23dp"-->
-<!--                android:text="@string/message"-->
-<!--                android:textSize="18dp"-->
-<!--                android:textColor="@color/colorAccent"/>-->
-<!--        </LinearLayout>-->
-<!--        <LinearLayout-->
-<!--            android:id="@+id/RequestLayout"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="horizontal">-->
-<!--            <ImageView-->
-<!--                android:layout_width="60dp"-->
-<!--                android:layout_height="60dp"-->
-<!--                android:padding="7dp"-->
-<!--                android:elevation="12dp"-->
-<!--                android:src="@drawable/ic_share_white_24dp"/>-->
-<!--            <TextView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_gravity="center"-->
-<!--                android:layout_marginLeft="23dp"-->
-<!--                android:text="@string/request"-->
-<!--                android:textSize="18dp"-->
-<!--                android:textColor="@color/colorAccent"/>-->
-<!--        </LinearLayout>-->
-<!--        <LinearLayout-->
-<!--            android:id="@+id/settingLayout"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="horizontal">-->
-<!--            <ImageView-->
-<!--                android:layout_width="60dp"-->
-<!--                android:layout_height="60dp"-->
-<!--                android:padding="7dp"-->
-<!--                android:elevation="12dp"-->
-<!--                android:src="@drawable/ic_settings_white_24dp"/>-->
-<!--            <TextView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_gravity="center"-->
-<!--                android:layout_marginLeft="23dp"-->
-<!--                android:text="@string/setting"-->
-<!--                android:textSize="18dp"-->
-<!--                android:textColor="@color/colorAccent"/>-->
-<!--        </LinearLayout>-->
-
-<!--    </LinearLayout>-->
-
 </RelativeLayout>
