--- a/app/src/main/res/layout/activity_group_chat.xml
+++ b/app/src/main/res/layout/activity_group_chat.xml
@@ -6,69 +6,72 @@
     android:layout_height="match_parent"
     tools:context=".Activity.GroupChatActivity">
 
+
     <include
         android:id="@+id/group_chat_appbar"
-        layout="@layout/activity_appbar"/>
+        layout="@layout/activity_appbar"
+        >
+    </include>
 
-    <LinearLayout
-        android:id="@+id/group_chat_content"
-        android:layout_below="@+id/group_chat_appbar"
+
+    <ScrollView
+        android:id="@+id/group_chat_scroll_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-
-
-        <ScrollView
-            android:id="@+id/group_chat_scroll_view"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.95">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/group_chat_txt_display"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="50dp"
-                    android:background="@color/colorPrimary"
-                    android:padding="10dp"
-                    android:textAllCaps="false"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="20sp" />
-            </LinearLayout>
-
-        </ScrollView>
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/group_chat_appbar"
+        android:layout_above="@+id/group_chat_edit_detail">
 
         <LinearLayout
-            android:id="@+id/group_chat_edit_detail"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="bottom"
-            android:orientation="horizontal"
-            android:background="@color/colorAccent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <EditText
-                android:id="@+id/group_chat_input_message"
-                android:layout_width="0dp"
+            <TextView
+                android:id="@+id/group_chat_txt_display"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="33.3"
-                android:hint="@string/write_sth"
-                android:inputType="text"
-                android:padding="17dp" />
+                android:padding="10dp"
+                android:textAllCaps="false"
+                android:textSize="20sp"
+                android:textColor="@android:color/background_dark"
+                android:layout_marginStart="2dp"
+                android:layout_marginEnd="2dp"
+                android:layout_marginBottom="60dp"
+                />
 
-            <ImageButton
-                android:id="@+id/group_chat_send_msg_btn"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:background="@color/colorAccent"
-                android:contentDescription="@string/send_btn_des"
-                android:src="@drawable/ic_send_carolina_blue_50dp" />
         </LinearLayout>
+
+    </ScrollView>
+
+
+
+    <LinearLayout
+        android:id="@+id/group_chat_edit_detail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true">
+
+        <EditText
+            android:id="@+id/group_chat_input_message"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"
+            android:hint="write your message here..."
+            android:padding="17dp"
+            />
+
+        <ImageButton
+            android:id="@+id/group_chat_send_msg_btn"
+            android:layout_width="0dp"
+            android:layout_weight="0.5"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_send_carolina_blue_50dp"
+            android:background="@color/colorAccent"
+            />
+
     </LinearLayout>
 
 
