--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,100 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorAccent">
+    android:background="@color/colorAccent"
+    android:orientation="vertical">
 
-    <include
-        android:id="@+id/profile_appbar"
-        layout="@layout/activity_appbar"
-        />
+    <include layout="@layout/activity_appbar"
+        android:id="@+id/profile_user_appbar"></include>
 
-    <RelativeLayout
-        android:layout_below="@+id/profile_appbar"
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_marginTop="20dp"
+        android:id="@+id/profile_user_image"
+        android:src="@drawable/profile_image"
+        app:civ_border_width="1dp"
+        app:civ_border_color="@color/colorPrimary"
+        android:layout_gravity="center"/>
+
+    <EditText
+        android:id="@+id/profile_user_name"
+        android:layout_margin="20dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:hint="@string/username"
+        android:textAlignment="center"
+        android:gravity="center_horizontal" />
 
-<!--        Cover Image-->
-        <FrameLayout
-            android:id="@+id/profile_cover_image"
-            android:layout_width="match_parent"
-            android:layout_height="150dp">
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/profile_cover"
-                android:scaleType="fitXY"/>
+    <EditText
+        android:id="@+id/profile_user_status"
+        android:layout_margin="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textMultiLine"
+        android:hint="@string/profile_status"
+        android:textAlignment="center"
+        android:gravity="center_horizontal" />
 
-            <Button
-                android:layout_width="78dp"
-                android:layout_height="22dp"
-                android:layout_gravity="end|bottom"
-                android:background="@drawable/button_shape"
-                android:text="Edit Text"
-                android:textSize="9dp"
-                android:textColor="@color/colorAccent"/>
+    <Button
+        android:id="@+id/profile_user_update_btn"
+        android:layout_gravity="center"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:hint="@string/update_profile"
+        android:textAlignment="center"
+        android:textColor="@color/colorAccent"
+        android:textColorHint="@color/colorAccent"/>
 
-        </FrameLayout>
+</LinearLayout>
 
 
-<!--        User Summary-->
-        <LinearLayout
-            android:id="@+id/profile_user_summary"
-            android:layout_below="@+id/profile_cover_image"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:orientation="vertical">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="3"
-                android:orientation="horizontal">
-                <com.facebook.drawee.view.SimpleDraweeView
-                    android:layout_width="65dp"
-                    android:layout_height="80dp"
-                    android:layout_gravity="start"
-                    android:layout_marginLeft="25dp"
-                    app:roundAsCircle="true"
-                    android:background="@color/colorAccent"
-                    android:src="@drawable/screenshot" />
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="15dp"
-                    android:orientation="vertical">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:text="Dara"
-                        android:textStyle="bold"
-                        android:textColor="@color/colorPrimaryDark"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:text="Sokdara Dara"/>
-                </LinearLayout>
+<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="match_parent"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    android:background="@color/colorAccent">-->
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="Edit Profile"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="6">
+<!--    <include-->
+<!--        android:id="@+id/profile_appbar"-->
+<!--        layout="@layout/activity_appbar"-->
+<!--        />-->
 
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="3">
+<!--    <RelativeLayout-->
+<!--        android:layout_below="@+id/profile_appbar"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent">-->
 
-            </LinearLayout>
-        </LinearLayout>
-    </RelativeLayout>
-</RelativeLayout>
+<!--&lt;!&ndash;        Cover Image&ndash;&gt;-->
+<!--        <FrameLayout-->
+<!--            android:id="@+id/profile_cover_image"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="150dp">-->
+<!--            <ImageView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:src="@drawable/profile_cover"-->
+<!--                android:scaleType="fitXY"/>-->
+
+<!--            <Button-->
+<!--                android:layout_width="78dp"-->
+<!--                android:layout_height="22dp"-->
+<!--                android:layout_gravity="end|bottom"-->
+<!--                android:background="@drawable/button_shape"-->
+<!--                android:text="Edit Text"-->
+<!--                android:textSize="9dp"-->
+<!--                android:textColor="@color/colorAccent"/>-->
+
+<!--        </FrameLayout>-->
+
+
+<!--&lt;!&ndash;        User Summary&ndash;&gt;-->
+<!--        <LinearLayout-->
+<!--            android:id="@+id/profile_user_summary"-->
+<!--            android:layout_below="@+id/profile_cover_image"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="300dp"-->
+<!--            android:orientation="vertical">-->
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="0dp"-->
+<!--                android:layout_weight="3"-->
+<!--                android:orientation="horizontal">-->
+<!--                <com.facebook.drawee.view.SimpleDraweeView-->
+<!--                    android:layout_width="65dp"-->
+<!--                    android:layout_height="80dp"-->
+<!--                    android:layout_gravity="start"-->
+<!--                    android:layout_marginLeft="25dp"-->
+<!--                    app:roundAsCircle="true"-->
+<!--                    android:background="@color/colorAccent"-->
+<!--                    android:src="@drawable/screenshot" />-->
+<!--                <LinearLayout-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:layout_marginLeft="15dp"-->
+<!--                    android:orientation="vertical">-->
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="match_parent"-->
+<!--                        android:layout_weight="1"-->
+<!--                        android:text="Dara"-->
+<!--                        android:textStyle="bold"-->
+<!--                        android:textColor="@color/colorPrimaryDark"/>-->
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="match_parent"-->
+<!--                        android:layout_weight="1"-->
+<!--                        android:text="Sokdara Dara"/>-->
+<!--                </LinearLayout>-->
+
+<!--                <TextView-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:text="Edit Profile"/>-->
+<!--            </LinearLayout>-->
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="0dp"-->
+<!--                android:layout_weight="6">-->
+
+<!--            </LinearLayout>-->
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="0dp"-->
+<!--                android:layout_weight="3">-->
+
+<!--            </LinearLayout>-->
+<!--        </LinearLayout>-->
+<!--    </RelativeLayout>-->
+<!--</RelativeLayout>-->
